<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
  >

<LinearLayout 
    android:id="@+id/pop_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_alignParentBottom="true"
     >

    
    <Button
        android:id="@+id/button_edit"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="22dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_btn"
        android:background="#f0ffffff"
        android:textStyle="bold"
        android:textColor="#333333"
         />

    <Button
        android:id="@+id/btn_add"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="2dip" 
         android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_btn"
        android:background="#f0ffffff"
        android:textColor="#333333"
         android:textStyle="bold"
         />

    <Button
        android:id="@+id/btn_cancel"
       android:layout_marginLeft="20dip"
       android:layout_marginRight="20dip"
       android:layout_marginTop="6dip" 
	   android:layout_marginBottom="13dip"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/cancel_btn"
       android:background="#f0ffffff"
        android:textColor="#333333"
       android:textStyle="bold"
       
        />
</LinearLayout>
</RelativeLayout>